--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261578216507437%22%3A%22p2dpLM4w%22%7D",
+        "value": "%7B%2261578216507437%22%3A%22dycspEOm%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.150Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.120Z",
+        "lastAccessed": "2025-11-15T17:49:57.120Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "sb",
@@ -59,53 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
-    },
-    {
-        "key": "wd",
-        "value": "412x915",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61579922700619",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
-    },
-    {
-        "key": "xs",
-        "value": "2%3A9ae-y8KDf1jC7Q%3A2%3A1763088031%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
-    },
-    {
-        "key": "fr",
-        "value": "0B7oEgwqZ05gnQWJH.AWf-GyIZapm4yyVMOMJU-eGB9HSUFgobQfcw0uERkW7oKjQPjns.BpFpIl..AAA.0.0.BpFpaj.AWfjHAYs5eNhm2wjHYXWDWVnt_I",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "pas",
@@ -113,25 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
+    },
+    {
+        "key": "wd",
+        "value": "412x915",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579922700619",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
+    },
+    {
+        "key": "xs",
+        "value": "10%3A4Pc6TRYZ5jAFEA%3A2%3A1763228987%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
+    },
+    {
+        "key": "fr",
+        "value": "0B7oEgwqZ05gnQWJH.AWeu2KRbmvZ3oB8C4A4ypoTCKwRB_wWjP5LcEO5pE0sizDD5Z88.BpFpIl..AAA.0.0.BpGL1A.AWcuy8PBCIkABGiBb_S3vzLXhM8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "fbl_st",
-        "value": "100415971%3BT%3A29384800",
+        "value": "101721870%3BT%3A29387149",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2984%3Btimestamp%3A1763088035",
+        "value": "v2%3Bclient_version%3A2985%3Btimestamp%3A1763228992",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-14T02:45:00.151Z",
-        "lastAccessed": "2025-11-14T02:45:00.151Z"
+        "creation": "2025-11-15T17:49:57.121Z",
+        "lastAccessed": "2025-11-15T17:49:57.121Z"
     }
 ]
